kubernetes/apps/actual-budget/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: actual-budget-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: actual-budget
  ports:
    - port: 5006
      targetPort: 5006
      protocol: TCP
      name: http
