kubernetes/apps/actual-budget/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: actual-budget-ingress
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-external
  tls:
    secretName: home-lungoo-de-tls
  routes:
    - match: Host(`actual-budget.home.lungoo.de`)
      kind: Rule
      services:
        - name: actual-budget-service
          port: 5006
